[package]
name = "straw-picks-over-http"
version = "0.1.0"
authors = ["Ed Lewis <ninjabear@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rand = "*"
chrono = "*"
itertools = "0.8"
lazy_static = "*"
base64 = "0.13.0"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.ed25519-dalek]
version = "1"
